--- a/trc-status.html
+++ b/trc-status.html
@@ -17,6 +17,19 @@
       color: black;
       font-weight: bold;
     }
+    h7 {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      font-size: 80%;
+      opacity: 0.25;
+    }
+    a {
+      color: black;
+    }
+    a:hover {
+      color: black;
+    }
     .container {
       max-width: 800px;
       margin: 0 auto;
@@ -29,6 +42,7 @@
     }
     .progress {
       background-color: rgba(0,0,0,0.05);
+      margin-bottom: 15px;
     }
     .progress-bar {
       background-color: #b45400;
@@ -56,9 +70,11 @@
           $(".progress-bar").css(
             "width", (data.complete/data.total*100)+"%"
           );
-          var estCompletion = new Date(now.getTime() + dateDiffMillis*(data.total/data.complete))
+          var estCompletionYears = Math.ceil(dateDiffMillis*(data.total/data.complete)/1000/60/60/24/365)
+          var estCompletionDate = new Date(now.getTime() + dateDiffMillis*(data.total/data.complete))
           $(".start-date").html(pubDate.toDateString().slice(4))
-          $(".completion-estimate").html(estCompletion.toDateString().slice(4))
+          //$(".completion-estimate").html(estCompletion.toDateString().slice(4))
+          $(".completion-estimate").html(estCompletionYears + " years")
         })
       });
     </script>
@@ -70,16 +86,12 @@
         <div class="progress reverse">
           <div class="progress-bar progress-bar-striped progress-bar-animated reverse" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
         </div>
-        <div>
-          Start date:
-          <div class="start-date"></div>
-        </div>
-        <div>
-          Estimated completion:
-          <div class="completion-estimate"></div>
-        </div>
+        <h6>
+          Estimated time remaining: <span class="completion-estimate"></span>
+        </h6>
       </div>
     </div>
+    <h7>Source: <i><a href="https://newsinteractives.cbc.ca/longform-single/beyond-94">CBC, Beyond 94: Truth and Reconciliation in Canada</a></i>.</h7>
     <script>
     </script>
   </body>
