Improves progress bar vibrancy.

--- a/trc-status.html
+++ b/trc-status.html
@@ -45,7 +45,7 @@
       margin-bottom: 15px;
     }
     .progress-bar {
-      background-color: #b45400;
+      background-color: #832500;
     }
     .progress-bar-animated.reverse {
       -webkit-animation-direction: reverse;
