--- a/trc-status.html
+++ b/trc-status.html
@@ -82,7 +82,8 @@
   <body>
     <div class="container">
       <div class="v-center">
-        <h1>TRC: Calls to Action</h1>
+        <h1>Truth and Reconciliation</h1>
+        <h2>Calls to Action</h2>
         <div class="progress reverse">
           <div class="progress-bar progress-bar-striped progress-bar-animated reverse" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
         </div>
