--- a/trc-status.html
+++ b/trc-status.html
@@ -14,7 +14,10 @@
       text-align: center;
     }
     h1 {
+      font-size: 1em;
       color: black;
+    }
+    h2 {
       font-weight: bold;
     }
     h7 {
@@ -31,9 +34,10 @@
       color: black;
     }
     .container {
-      max-width: 800px;
+      max-width: 900px;
       margin: 0 auto;
       height: 100vh;
+      height: -webkit-fill-available;
     }
     .v-center {
       position: relative;
@@ -42,7 +46,10 @@
     }
     .progress {
       background-color: rgba(0,0,0,0.05);
-      margin-bottom: 15px;
+      margin-top: 20px;
+      margin-bottom: 25px;
+      height: 40px;
+      border-radius: 9px;
     }
     .progress-bar {
       background-color: #832500;
@@ -54,6 +61,11 @@
       -o-animation-direction: reverse;
       animation-direction: reverse;
     }
+    .progress-percent {
+      color: orange;
+      font-weight: bold;
+      opacity: 1.0;
+    }
     </style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -64,15 +76,19 @@
       var dateDiffMillis = Math.abs(now - pubDate)
       $( function() {
         $.getJSON("trc-status.json", function(data) {
+          var completion = Math.floor(data.complete/data.total*100)
           $(".progress-bar").attr(
-            "aria-valuenow", data.complete/data.total*100
+            "aria-valuenow", completion
           );
           $(".progress-bar").css(
-            "width", (data.complete/data.total*100)+"%"
+            "width", completion+"%"
+          );
+          $(".progress-percent").html(
+            completion+"%"
           );
           var estCompletionYears = Math.ceil(dateDiffMillis*(data.total/data.complete)/1000/60/60/24/365)
           var estCompletionDate = new Date(now.getTime() + dateDiffMillis*(data.total/data.complete))
-          $(".start-date").html(pubDate.toDateString().slice(4))
+          //$(".start-date").html(pubDate.toDateString().slice(4))
           //$(".completion-estimate").html(estCompletion.toDateString().slice(4))
           $(".completion-estimate").html(estCompletionYears + " years")
         })
@@ -82,10 +98,10 @@
   <body>
     <div class="container">
       <div class="v-center">
-        <h1>Truth and Reconciliation</h1>
+        <h1>Truth and Reconciliation in Canada</h1>
         <h2>Calls to Action</h2>
         <div class="progress reverse">
-          <div class="progress-bar progress-bar-striped progress-bar-animated reverse" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+          <div class="progress-bar progress-bar-striped progress-bar-animated reverse" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"><span class="progress-percent"></span></div>
         </div>
         <h6>
           Estimated time remaining: <span class="completion-estimate"></span>
