Adds some more polish to the landing page.

--- a/trc-status.html
+++ b/trc-status.html
@@ -20,6 +20,9 @@
     h2 {
       font-weight: bold;
     }
+    h6 {
+      color: #832500;
+    }
     h7 {
       position: absolute;
       bottom: 10px;
