Make the orange more orange.

--- a/trc-status.html
+++ b/trc-status.html
@@ -10,7 +10,7 @@
     <style>
     body {
       color: black;
-      background-color: orange;
+      background-color: rgb(255, 140, 0);
       text-align: center;
     }
     h1 {
