Darkens the loading label.

--- a/trc-status.html
+++ b/trc-status.html
@@ -88,7 +88,9 @@
       left: 50%;
       transform: translateX(-50%);
       color: black;
-      opacity: 0.25;
+      opacity: 0.33;
+      font-weight: bold;
+      font-size: 1.1em;
     }
     </style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
