Returns percentage to white.

--- a/trc-status.html
+++ b/trc-status.html
@@ -77,7 +77,7 @@
       animation-direction: reverse;
     }
     .progress-percent {
-      color: rgb(255, 198, 0);
+      color: white;
       font-weight: bold;
       display: none;
       opacity: 1.0;
