Tones down the white intensittty.

--- a/trc-status.html
+++ b/trc-status.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="description" content="Webpage description goes here" />
+    <meta name="description" content="Live progress bar of TRC Calls to Action completion." />
     <meta charset="utf-8">
+    <meta property="og:image" content="https://ianwojtowicz.com/trc-status/orange.jpg"/>
     <title>TRC Calls to Action: Loading...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="">
@@ -80,7 +81,7 @@
       color: white;
       font-weight: bold;
       display: none;
-      opacity: 1.0;
+      opacity: 0.7;
     }
     .loading {
       position: absolute;
