Adds social link previews.

--- a/trc-status.html
+++ b/trc-status.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="description" content="Live progress bar of TRC Calls to Action completion." />
+    <meta name="description" content="Live progress bar of the TRC's Calls to Action" />
     <meta charset="utf-8">
     <meta property="og:image" content="https://ianwojtowicz.com/trc-status/orange.jpg"/>
-    <title>TRC Calls to Action: Loading...</title>
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:title" content="Reconciliation: Loading..."/>
+    <meta name="twitter:description" content="Live progress bar of the TRC's Calls to Action"/>
+    <meta name="twitter:image" content="https://ianwojtowicz.com/trc-status/orange.jpg"/>
+    <title>Reconciliation: Loading...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -33,7 +37,7 @@
       right: 10px;
       font-size: 70%;
       color: #832500;
-      opacity: 0.3;
+      opacity: 0.5;
     }
     a {
       color: #832500;
@@ -132,7 +136,7 @@
   <body>
     <div class="container">
       <div class="v-center">
-        <h1>Truth and Reconciliation in Canada</h1>
+        <h1>Truth and Reconciliation Commission of Canada</h1>
         <h2>Calls to Action</h2>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated reverse slower-load" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"><span class="progress-percent"></span></div>
