--- a/trc-status.html
+++ b/trc-status.html
@@ -144,7 +144,7 @@
     <div class="container">
       <div class="v-center">
         <h1>Truth and Reconciliation Commission of Canada</h1>
-        <h2>Calls to Action</h2>
+        <h2>Completed Calls to Action</h2>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated reverse slower-load" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"><span class="progress-percent"></span></div>
           <span class="loading">Loading...</span>
