Adds link to Calls to Action document.

--- a/trc-status.html
+++ b/trc-status.html
@@ -25,6 +25,9 @@
     h2 {
       font-weight: bold;
     }
+    h2 a {
+      color: black;
+    }
     h6 {
       color: #832500;
     }
@@ -144,7 +147,7 @@
     <div class="container">
       <div class="v-center">
         <h1>Truth and Reconciliation Commission of Canada</h1>
-        <h2>Completed Calls to Action</h2>
+        <h2>Completed <a href="http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf">Calls to Action</a></h2>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated reverse slower-load" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"><span class="progress-percent"></span></div>
           <span class="loading">Loading...</span>
