--- a/trc-status.html
+++ b/trc-status.html
@@ -75,7 +75,7 @@
       animation: progress-bar-stripes 2s linear infinite;
     }
     .progress-bar-animated.slower-load {
-      transition: width 2s ease;
+      transition: width 4s ease;
     }
     .progress-bar-animated.reverse {
       -webkit-animation-direction: reverse;
@@ -96,9 +96,9 @@
       left: 50%;
       transform: translateX(-50%);
       color: black;
-      opacity: 0.33;
-      font-weight: bold;
-      font-size: 1.1em;
+      opacity: 0.25;
+      font-weight: normal;
+      font-size: 1em;
     }
     </style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -130,16 +130,25 @@
           setTimeout(function() {
             $(".progress-percent").fadeIn(250);
             $(".loading").fadeOut(100);
-          }, 1500)
+          }, 4000)
           setTimeout(function() {
             $(".time-remaining").animate({ opacity: 1.0 })
           }, 2000)
+          //pulse($(".loading"))
           var estCompletionYears = Math.ceil(dateDiffMillis*(data.total/data.complete)/1000/60/60/24/365)
           var estCompletionDate = new Date(now.getTime() + dateDiffMillis*(data.total/data.complete))
           //$(".start-date").html(pubDate.toDateString().slice(4))
           //$(".completion-estimate").html(estCompletion.toDateString().slice(4))
           $(".completion-estimate").html(estCompletionYears + " years")
         })
+      }
+
+      function pulse(element) {
+        element.fadeOut(1000, function() {
+          element.fadeIn(1000, function() {
+            pulse(element);
+          });
+        });
       }
     </script>
   </head>
@@ -150,7 +159,7 @@
         <h2>Completed <a href="http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf">Calls to Action</a></h2>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated reverse slower-load" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"><span class="progress-percent"></span></div>
-          <span class="loading">Loading...</span>
+          <span class="loading">Loading</span>
         </div>
         <h6 class="time-remaining">
           Estimated time remaining: <span class="completion-estimate"></span>
