Improves loading animation.

--- a/trc-status.html
+++ b/trc-status.html
@@ -129,12 +129,13 @@
           );
           setTimeout(function() {
             $(".progress-percent").fadeIn(250);
-            $(".loading").fadeOut(100);
+            //$(".loading").fadeOut(100);
+            $(".loading").remove();
           }, 4000)
           setTimeout(function() {
             $(".time-remaining").animate({ opacity: 1.0 })
           }, 4000)
-          //pulse($(".loading"))
+          pulse($(".loading"))
           var estCompletionYears = Math.ceil(dateDiffMillis*(data.total/data.complete)/1000/60/60/24/365)
           var estCompletionDate = new Date(now.getTime() + dateDiffMillis*(data.total/data.complete))
           //$(".start-date").html(pubDate.toDateString().slice(4))
@@ -144,8 +145,8 @@
       }
 
       function pulse(element) {
-        element.fadeOut(1000, function() {
-          element.fadeIn(1000, function() {
+        element.fadeOut(800, function() {
+          element.fadeIn(800, function() {
             pulse(element);
           });
         });
