--- a/trc-status.html
+++ b/trc-status.html
@@ -61,7 +61,7 @@
     }
     .progress {
       position: relative;
-      background-color: rgba(0,0,0,0.05);
+      background-color: rgba(0,0,0,0.0);
       margin-top: 20px;
       margin-bottom: 25px;
       height: 40px;
@@ -96,7 +96,7 @@
       left: 50%;
       transform: translateX(-50%);
       color: black;
-      opacity: 0.25;
+      opacity: 0.33;
       font-weight: normal;
       font-size: 1em;
     }
@@ -130,11 +130,11 @@
           setTimeout(function() {
             $(".progress-percent").fadeIn(250);
             //$(".loading").fadeOut(100);
-            $(".loading").remove();
+            //$(".loading").remove();
           }, 4000)
           setTimeout(function() {
             $(".time-remaining").animate({ opacity: 1.0 })
-          }, 4000)
+          }, 4500)
           pulse($(".loading"))
           var estCompletionYears = Math.ceil(dateDiffMillis*(data.total/data.complete)/1000/60/60/24/365)
           var estCompletionDate = new Date(now.getTime() + dateDiffMillis*(data.total/data.complete))
@@ -158,7 +158,7 @@
       <div class="v-center">
         <h1>Truth and Reconciliation Commission of Canada</h1>
         <h2>Completed <a href="http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf">Calls to Action</a></h2>
-        <div class="progress">
+        <div class="progress progress-bar-striped progress-bar-animated reverse">
           <div class="progress-bar progress-bar-striped progress-bar-animated reverse slower-load" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"><span class="progress-percent"></span></div>
           <span class="loading">Loading</span>
         </div>
