--- a/trc-status.html
+++ b/trc-status.html
@@ -61,11 +61,14 @@
     }
     .progress {
       position: relative;
-      background-color: rgba(0,0,0,0.0);
+      background-color: rgba(0,0,0,0.02);
       margin-top: 20px;
       margin-bottom: 25px;
       height: 40px;
       border-radius: 9px;
+    }
+    .progress.progress-bar-striped {
+      background-image: linear-gradient(45deg,rgba(0,0,0,.02) 25%,transparent 25%,transparent 50%,rgba(0,0,0,.02) 50%,rgba(0,0,0,.02) 75%,transparent 75%,transparent);
     }
     .progress-bar {
       background-color: #832500;
@@ -130,7 +133,7 @@
           setTimeout(function() {
             $(".progress-percent").fadeIn(250);
             //$(".loading").fadeOut(100);
-            //$(".loading").remove();
+            $(".loading").remove();
           }, 4000)
           setTimeout(function() {
             $(".time-remaining").animate({ opacity: 1.0 })
