Resolves #1 - crisis line link. Also darkens source link.

--- a/trc-status.html
+++ b/trc-status.html
@@ -31,22 +31,30 @@
     h6 {
       color: #832500;
     }
-    .time-remaining {
-      opacity: 0;
-    }
-    h7 {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      font-size: 70%;
-      color: #832500;
-      opacity: 0.5;
-    }
     a {
       color: #832500;
+      font-style: italic;
     }
     a:hover {
       color: #832500;
+    }
+    .time-remaining {
+      opacity: 0;
+    }
+    .footer {
+      font-size: 70%;
+      color: #832500;
+      opacity: 0.8;
+    }
+    .source {
+      position: absolute;
+      bottom: 32px;
+      right: 20px;
+    }
+    .crisis-line {
+      position: absolute;
+      bottom: 10px;
+      right: 20px;
     }
     .container {
       max-width: 900px;
@@ -170,7 +178,8 @@
         </h6>
       </div>
     </div>
-    <h7>Source: <i><a href="https://newsinteractives.cbc.ca/longform-single/beyond-94">CBC, Beyond 94: Truth and Reconciliation in Canada</a></i>.</h7>
+    <h7 class="source footer">Source: <a href="https://newsinteractives.cbc.ca/longform-single/beyond-94">CBC, Beyond 94: Truth and Reconciliation in Canada</a>.</h7>
+    <h7 class="crisis-line footer"><a href="https://www.irsss.ca/faqs/how-do-i-reach-the-24-hour-crisis-line">IRSSS</a> 24 Hour Crisis Line: <a href="tel:1-866-925-4419">1-866-925-4419</a></h7>
     <script>
     </script>
   </body>
