--- a/trc-status.html
+++ b/trc-status.html
@@ -15,7 +15,8 @@
     <style>
     body {
       color: black;
-      background-color: rgb(255, 140, 0);
+      background: rgb(255,125,0);
+      background: linear-gradient(90deg, rgba(255,125,0,1) 0%, rgba(255,156,0,1) 100%);
       text-align: center;
     }
     h1 {
