Fixes mobile safari landscape layout bug.

--- a/trc-status.html
+++ b/trc-status.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="description" content="Live progress bar of the TRC's Calls to Action" />
     <meta charset="utf-8">
     <meta property="og:image" content="https://ianwojtowicz.com/trc-status/orange.jpg"/>
@@ -9,7 +10,6 @@
     <meta name="twitter:description" content="Live progress bar of the TRC's Calls to Action"/>
     <meta name="twitter:image" content="https://ianwojtowicz.com/trc-status/orange.jpg"/>
     <title>Reconciliation: Loading...</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
@@ -59,7 +59,7 @@
       right: 20px;
     }
     .container {
-      max-width: 900px;
+      max-width: 830px;
       margin: 0 auto;
       height: 100vh;
       height: -webkit-fill-available;
