--- a/trc-status.html
+++ b/trc-status.html
@@ -18,6 +18,7 @@
       background: rgb(255,125,0);
       background: linear-gradient(90deg, rgba(255,125,0,1) 0%, rgba(255,156,0,1) 100%);
       text-align: center;
+      height: 100vh;
     }
     h1 {
       font-size: 1em;
