Fixes font bug on Windows Edge.

--- a/trc-status.html
+++ b/trc-status.html
@@ -19,6 +19,7 @@
       background: linear-gradient(90deg, rgba(255,125,0,1) 0%, rgba(255,156,0,1) 100%);
       text-align: center;
       height: 100vh;
+      font-family: Helvetica, Arial, sans-serif;
     }
     h1 {
       font-size: 1em;
