Improves font sizes on different devices.

--- a/trc-status.html
+++ b/trc-status.html
@@ -26,7 +26,13 @@
       color: black;
     }
     h2 {
+      font-size: 3em;
       font-weight: bold;
+    }
+    @media only screen and (max-width: 600px) {
+      h2 {
+        font-size: 1.81em;
+      }
     }
     h2 a {
       color: black;
