Improves PhantomJS rendering.

--- a/trc-status.html
+++ b/trc-status.html
@@ -79,6 +79,7 @@
       position: relative;
       top: 50%;
       transform: translateY(-50%);
+      -webkit-transform: translateY(-50%);
     }
     .progress {
       position: relative;
