--- a/trc-status.html
+++ b/trc-status.html
@@ -169,9 +169,9 @@
       var pubDate = new Date(2015, 11, 15, 12, 0, 0, 0); // Dec 15, 2015
       var now = new Date()
       var dateDiffMillis = Math.abs(now - pubDate)
-      var loadingDelay = 1000 * 2; // 3 seconds
+      var loadingDelay = 0; // 0 seconds
       var reloadInterval = 1000 * 60 * 60; // Hourly
-      var barLoadDuration = 1000 * 6 // 6 seconds
+      var barLoadDuration = 1000 * 3 // 3 seconds
       
       $( function() {
         setDisplayMode();
