--- a/trc-status.html
+++ b/trc-status.html
@@ -75,7 +75,7 @@
     }
     .footer {
       display: none;
-      font-size: 70%;
+      font-size: 80%;
       color: #832500;
       opacity: 0.8;
     }
@@ -89,6 +89,7 @@
       position: absolute;
       bottom: 32px;
       right: 20px;
+      text-align: right;
     }
     .crisis-line {
       position: absolute;
@@ -280,8 +281,7 @@
   <body id="body">
     <div class="container">
       <div class="v-center">
-        <h1>Truth and Reconciliation Commission of Canada</h1>
-        <h2>Completed <a href="http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf">Calls to Action</a></h2>
+        <h2>Canada's Reconciliation Progress</h2>
         <div class="progress progress-bar-striped progress-bar-animated reverse">
           <div class="progress-bar progress-bar-striped progress-bar-animated reverse slower-load" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"><span class="progress-percent"></span></div>
           <span class="loading">Loading</span>
@@ -291,7 +291,11 @@
         </h6>
       </div>
     </div>
-    <h7 class="source footer">Source: <a href="https://newsinteractives.cbc.ca/longform-single/beyond-94">CBC, Beyond 94: Truth and Reconciliation in Canada</a>.</h7>
+    <h7 class="source footer">This live graph continuously tracks the progress of the<br/>
+    <a href="http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf">94 Calls to Action</a> of the Truth and Reconciliation Commission of Canada.<br/>
+    Leave it running anywhere to wait for progress.<br/>
+    Source: <a href="https://newsinteractives.cbc.ca/longform-single/beyond-94">CBC, Beyond 94: Truth and Reconciliation in Canada</a>.
+    </h7>
     <h7 class="crisis-line footer"><a href="https://www.irsss.ca/faqs/how-do-i-reach-the-24-hour-crisis-line">IRSSS</a> 24 Hour Crisis Line: <a href="tel:1-866-925-4419">1-866-925-4419</a></h7>
     <script>
     </script>
