--- a/trc-status.html
+++ b/trc-status.html
@@ -293,7 +293,7 @@
     </div>
     <h7 class="source footer">This live graph continuously tracks the progress of the<br/>
     <a href="http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf">94 Calls to Action</a> of the Truth and Reconciliation Commission of Canada.<br/>
-    Leave it running anywhere to wait for progress.<br/>
+    Leave this running anywhere and wait for progress.<br/>
     Source: <a href="https://newsinteractives.cbc.ca/longform-single/beyond-94">CBC, Beyond 94: Truth and Reconciliation in Canada</a>.
     </h7>
     <h7 class="crisis-line footer"><a href="https://www.irsss.ca/faqs/how-do-i-reach-the-24-hour-crisis-line">IRSSS</a> 24 Hour Crisis Line: <a href="tel:1-866-925-4419">1-866-925-4419</a></h7>
